gltf (+1 squashed commits)
Squashed commits:

[a7ba06e] Asset

--- a/projects/test/app.html
+++ b/projects/test/app.html
@@ -18,7 +18,7 @@
           }
         }
     </script>
-  <script src="./dist/platforms/webgl/app.js" type="module"></script>
+  <script src="../../dist/projects/test/script/app.js" type="module"></script>
 </body>
 
 </html>
