--- a/projects/test/app.html
+++ b/projects/test/app.html
@@ -14,7 +14,7 @@
   <script type="importmap">
         {
           "imports": {
-            "gl-matrix": "../script/node_modules/gl-matrix/esm/index.js"
+            "gl-matrix": "../../script/node_modules/gl-matrix/esm/index.js"
           }
         }
     </script>
