--- a/projects/test/app.html
+++ b/projects/test/app.html
@@ -12,7 +12,7 @@
     <canvas id="ZeroCanvas" width="640" height="960"></canvas>
   </div>
   <div id="ControlContainer">
-    <div>
+    <!-- <div>
       <input id="eulerXInput" type="range" min="-360" max="360" value="0" />
       <label id="eulerXLabel"></label>
     </div>
@@ -23,15 +23,15 @@
     <div>
       <input id="eulerZInput" type="range" min="-360" max="360" value="0" />
       <label id="eulerZLabel"></label>
-    </div>
+    </div> -->
   </div>
-  <script type="importmap">
+  <!-- <script type="importmap">
         {
           "imports": {
             "gl-matrix": "../../script/node_modules/gl-matrix/esm/index.js"
           }
         }
-    </script>
+  </script> -->
   <script src="../../dist/projects/test/script/app.js" type="module"></script>
 </body>
 
