Node event: TRANSFORM_CHANGED

--- a/projects/test/app.html
+++ b/projects/test/app.html
@@ -12,18 +12,18 @@
     <canvas id="ZeroCanvas" width="640" height="960"></canvas>
   </div>
   <div id="ControlContainer">
-    <!-- <div>
-      <input id="eulerXInput" type="range" min="-360" max="360" value="0" />
+    <div>
+      <input id="eulerXInput" type="range" min="-180" max="180" value="0" />
       <label id="eulerXLabel"></label>
     </div>
     <div>
-      <input id="eulerYInput" type="range" min="-360" max="360" value="0" />
+      <input id="eulerYInput" type="range" min="-180" max="180" value="0" />
       <label id="eulerYLabel"></label>
     </div>
     <div>
-      <input id="eulerZInput" type="range" min="-360" max="360" value="0" />
+      <input id="eulerZInput" type="range" min="-180" max="180" value="0" />
       <label id="eulerZLabel"></label>
-    </div> -->
+    </div>
   </div>
   <!-- <script type="importmap">
         {
