--- a/projects/test/script/platforms/web/app.html
+++ b/projects/test/script/platforms/web/app.html
@@ -32,7 +32,7 @@
           }
         }
   </script> -->
-  <script src="../../dist/projects/test/script/app.js" type="module"></script>
+  <script src="dist/projects/test/script/platforms/web/app.js" type="module"></script>
 </body>
 
 </html>
