--- a/projects/test/script/platforms/web/app.html
+++ b/projects/test/script/platforms/web/app.html
@@ -32,7 +32,11 @@
           }
         }
   </script> -->
-  <script src="dist/projects/test/script/platforms/web/app.js" type="module"></script>
+  <script type="module">
+    import App from "./dist/projects/test/script/main/App.js";
+    import webgame from "./dist/script/platforms/webgl/webgame.js";
+    webgame.run(document.getElementById("ZeroCanvas"), App);
+  </script>
 </body>
 
 </html>
