--- a/projects/vehicle/script/platforms/web/app.html
+++ b/projects/vehicle/script/platforms/web/app.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>test</title>
-  <link rel="icon" href="favicon.ico" />
+  <link rel="icon" href="../../../../../assets/favicon.ico" />
 </head>
 
 <body style="display:flex;">
