refactor (+1 squashed commits)
Squashed commits:

[2e255ff] refactor

--- a/projects/vehicle/script/platforms/web/app.html
+++ b/projects/vehicle/script/platforms/web/app.html
@@ -47,7 +47,9 @@
     window.loader = new WebLoader;
 
     import WebDevice from "./dist/script/platforms/webgl/gfx/WebDevice.js";
-    window.gfx = new WebDevice(document.getElementById("ZeroCanvas"));
+    window.device = new WebDevice(document.getElementById("ZeroCanvas"));
+    import WebNS from "./dist/script/platforms/webgl/gfx/WebNS.js";
+    window.gfx = new WebNS;
   </script>
   <script type="module">
     import App from "./dist/projects/vehicle/script/main/App.js";
