--- a/projects/ui/script/platforms/web/app.html
+++ b/projects/ui/script/platforms/web/app.html
@@ -25,18 +25,31 @@
       <label id="eulerZLabel"></label>
     </div>
   </div>
-  <!-- <script type="importmap">
-        {
-          "imports": {
-            "gl-matrix": "../../script/node_modules/gl-matrix/esm/index.js"
-          }
-        }
-  </script> -->
+  <script>
+    const currentScript = document.currentScript;
+    const req = new XMLHttpRequest();
+    // use synchronous request
+    req.open('GET', "../../../imports.json", false);
+    req.onload = function () {
+      const imports = JSON.parse(req.response);
+      for (const key in imports) {
+        imports[key] = "../../../" + imports[key];
+      }
+      const im = document.createElement('script');
+      im.type = 'importmap';
+      im.textContent = JSON.stringify({ imports });
+      currentScript.after(im);
+    };
+    req.send();
+  </script>
   <script type="module">
+    import WebLoader from "./dist/script/platforms/webgl/WebLoader.js";
+    window.loader = new WebLoader;
+
     import WebDevice from "./dist/script/platforms/webgl/gfx/WebDevice.js";
-    const gfx = new WebDevice(document.getElementById("ZeroCanvas"));
-    gfx.initialize()
-    window.gfx = gfx;
+    window.device = new WebDevice(document.getElementById("ZeroCanvas"));
+    import WebNS from "./dist/script/platforms/webgl/gfx/WebNS.js";
+    window.gfx = new WebNS;
   </script>
   <script type="module">
     import App from "./dist/projects/ui/script/main/App.js";
