refactor (+2 squashed commit)
Squashed commit:

[904109d] refactor

[bb78cbb] refactor

--- a/projects/vehicle/script/wx/index.html
+++ b/projects/vehicle/script/wx/index.html
@@ -11,7 +11,7 @@
   <div id="ZeroContainer">
     <canvas id="ZeroCanvas" width="640" height="960"></canvas>
   </div>
-  <script src="./s.js"></script>
+  <script src="/minigame/s.js"></script>
   <script type="systemjs-importmap">
     {
       "imports": {
