jsb-systemjs (+1 squashed commits)
Squashed commits:

[3078e77] jsb-systemjs

--- a/projects/shadow/script/web/index.html
+++ b/projects/shadow/script/web/index.html
@@ -28,7 +28,7 @@
     req.send();
   </script>
   <script type="module">
-    import { run } from './dist/web/index.js';
+    import { run } from './dist/index.js';
     run(document.getElementById("ZeroCanvas"));
   </script>
 </body>
