web touch events

--- a/projects/common/web/index.html
+++ b/projects/common/web/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body style="display:flex; flex-direction:column; align-items:center;">
-  <canvas id="ZeroCanvas" width="640" height="960"></canvas>
+  <canvas id="boot_canvas" width="640" height="960"></canvas>
   <textarea id="console_textarea" style="width: 640px;height: 960px;" readonly="readonly"></textarea>
   <script>
     const currentScript = document.currentScript;
