--- a/projects/common/web/index.html
+++ b/projects/common/web/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body style="display:flex; flex-direction:column; align-items:center;">
-  <canvas id="boot_canvas" width="640" height="960"></canvas>
+  <!-- https://webgl2fundamentals.org/webgl/lessons/webgl-and-alpha.html -->
+  <canvas id="boot_canvas" width="640" height="960" style="background: black;"></canvas>
   <textarea id="console_textarea" style="width: 640px;height: 960px;" readonly="readonly"></textarea>
   <script>
     const currentScript = document.currentScript;
