clear color black

--- a/projects/common/web/index.html
+++ b/projects/common/web/index.html
@@ -20,7 +20,7 @@
   <div style="position: relative;">
     <!-- https://webgl2fundamentals.org/webgl/lessons/webgl-and-alpha.html -->
     <!-- https://www.zhihu.com/question/38437397 -->
-    <canvas id="boot_canvas" style="width: 0px; height: 0px; background: black; vertical-align:middle;"></canvas>
+    <canvas id="boot_canvas" style="width: 0px; height: 0px; vertical-align:middle;"></canvas>
     <textarea id="boot_log" rows="3" readonly="true"
       style="position: absolute; left:0px; top: 0px; width: 100%; background: transparent; color:gray;"></textarea>
   </div>
